--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/OFFICIAL-SAMEER/HINDUS USERBOT/",
+  "repository": "https://github.com/HINDUS-AKSHAY/HINDUS_USERBOT",
   "website": "#TODO",
   "success_url": "https://t.me/HINDUS_USERBOT_SUPPORT",
   "env": {
