--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "HINDUS USERBOTZ",
+  "name": "HINDUS_USERBOT",
   "description": "A simple Telegram userbot based on Telethon ",
   "logo": "https://telegra.ph/file/4c4079343a5a75aca0aae.jpg",
   "keywords": [
