--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   "env": {
     "ALIVE_NAME": {
       "description": "give your name",
-      "value": "ⱠłØ₦-Ⱬ Ʉѕєя"
+      "value": "धर्मो रक्षति रक्षितः ||🚩"
     },
     "APP_ID": {
       "description": "Get this value from my.telegram.org! Please do not steal",
